src/test/deca/syntax/invalid/sansObjets/invalidNewBlock.deca
// Description:
//    tests de programme incorrect syntaxiquement (pas le droit de creer des blocs de code)
//
// Historique:
//    @DATE@

{
    int x, y;

    if (x > y) {
        print("x above y");
    }

    {
        while (x < 10) {
            x = x + 1;
            print(x, " < 10");
        }
    }
}